--- a/real_estate/templates/listings.html
+++ b/real_estate/templates/listings.html
@@ -1,3 +1,5 @@
  {% for listing in listings %}
- <p>{{ listing.title }}</p>
+
+ <a href="/listings/{{ listing.id }}/">{{ listing.title }}</a>
+ 
  {% endfor %}
