--- a/real_estate/templates/listings.html
+++ b/real_estate/templates/listings.html
@@ -1,5 +1,14 @@
- {% for listing in listings %}
+{% extends "base.html" %}
 
- <a href="/listings/{{ listing.id }}/">{{ listing.title }}</a>
- 
- {% endfor %}
+{% block content %}
+
+<a href="/add-listing/" class="px-3 text-blue-500">Create a  new listing</a>
+ {% for listing in listings %}
+<div class="mt-2 px-3 py-2 bg-gray-100 rounded-sm">
+    <h3 class="text-3xl text-gray-900">{{ listing.title }}</h3>
+    <img src="{{ listing.image.url }}" alt=""/>
+        <a href="/listings/{{ listing.id }}/" class="text-blue-500">View details</a>
+</div>
+{% endfor %}
+
+{% endblock content %}
